syntax = "proto3";

package music_streaming.music.playlist;

option go_package="./protos/v1/pb";

import "protos/v1/common.proto";
import "protos/v1/song.proto";

message Playlist {
  uint64 playlist_id = 1;
  string name = 2;
  string created_by = 3;
  uint64 created_at = 4;
  uint64 updated_at = 5;
  uint32 status = 6;
  repeated music_streaming.music.song.Song songs = 7;
}

service PlaylistService {
  rpc GetPlaylistList (GetPlaylistListRequest) returns (GetPlaylistListResponse);
  rpc GetPlaylistDetails (GetPlaylistDetailsRequest) returns (GetPlaylistDetailsResponse);
  rpc CreatePlaylist (CreatePlaylistRequest) returns (CreatePlaylistResponse);
  rpc UpdatePlaylist (UpdatePlaylistRequest) returns (UpdatePlaylistResponse);
  rpc DeletePlaylist (DeletePlaylistRequest) returns (DeletePlaylistResponse);
}

// Get Playlist List
message GetPlaylistListRequest {
  music_streaming.music.common.PaginationInfo pagination_info = 1;
  GetPlaylistListFilter filter = 2;
}

message GetPlaylistListFilter {
  string name = 1;
  string created_by = 2;
  uint64 created_time_from = 3;
  uint64 created_time_to = 4;
}

message GetPlaylistListResponse {
  GetPlaylistListResponseData data = 1;
  uint32 error = 2;
  string error_msg = 3;
}

message GetPlaylistListResponseData {
  repeated Playlist playlists = 1;
  uint64 total_count = 2;
}

// Get Playlist Details
message GetPlaylistDetailsRequest {
  uint64 playlist_id = 1;
}

message GetPlaylistDetailsResponse {
  GetPlaylistDetailsResponseData data = 1;
  uint32 error = 2;
  string error_msg = 3;
}

message GetPlaylistDetailsResponseData {
  Playlist Playlist = 1;
}

// Create Playlist
message CreatePlaylistRequest {
  Playlist playlist = 1;
}

message CreatePlaylistResponse {
  uint32 error = 2;
  string error_msg = 3;
}

// Update Playlist
message UpdatePlaylistRequest {
  Playlist playlist = 1;
}

message UpdatePlaylistResponse {
  uint32 error = 2;
  string error_msg = 3;
}

// Delete Playlist
message DeletePlaylistRequest {
  uint64 playlist_id = 1;
}

message DeletePlaylistResponse {
  uint32 error = 2;
  string error_msg = 3;
}